<resources>
    <string name="app_name">Pushy App</string>
    <string name="name">Pushy</string>
    <string name="select_level">Select level</string>
    <string name="next_level">Next level</string>
    <string name="level_completed">Level completed!</string>
    <string name="number_of_attemps">Number of attemps:</string>
    <string name="time">Time:</string>
    <string name="reset">Resest</string>
    <string name="close">Close</string>
    <string name="languange">Languange</string>
    <string name="german">German</string>
    <string name="english">English</string>
    <string name="seconds">Seconds</string>
    <string name="minutes">Minutes</string>
    <string name="level_selection">Level selection</string>
</resources>